--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,14 +25,14 @@ body.fh5co-offcanvas {
 }
 
 a {
-  color: #10a9af;
+  color: #af105a;
   -webkit-transition: 0.5s, ease;
   -o-transition: 0.5s, ease;
   transition: 0.5s, ease;
 }
 a:hover {
   text-decoration: none !important;
-  color: #10a9af !important;
+  color: #af105a !important;
 }
 
 .eventcat{
@@ -60,17 +60,17 @@ figure {
 
 ::-webkit-selection {
   color: #fcfcfc;
-  background: #10a9af;
+  background: #af105a;
 }
 
 ::-moz-selection {
   color: #fcfcfc;
-  background: #10a9af;
+  background: #af105a;
 }
 
 ::selection {
   color: #fcfcfc;
-  background: #10a9af;
+  background: #af105a;
 }
 
 #fh5co-header {
@@ -92,7 +92,7 @@ figure {
 
 .header-top {
   padding: 10px 0;
-  background: #10a9af;
+  background: #af105a;
 }
 .header-top .fh5co-link a {
   margin-left: 10px;
@@ -142,7 +142,7 @@ figure {
 .fh5co-cover,
 .fh5co-hero {
   position: relative;
-  height: 800px;
+  height: 575px;
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover,
@@ -168,6 +168,7 @@ figure {
 
 .fh5co-overlay {
   position: absolute !important;
+  height: 100%;
   width: 100%;
   top: 0;
   left: 0;
@@ -184,7 +185,7 @@ figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover {
-    heifght: inherit;
+    height: inherit;
     padding: 3em 0;
   }
 }
@@ -197,7 +198,7 @@ figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover.fh5co-cover_2 {
-    heifght: inherit;
+    height: inherit;
     padding: 3em 0;
   }
 }
@@ -280,11 +281,11 @@ figure {
   border-bottom: none !important;
 }
 .sf-menu a:hover, .sf-menu a:focus {
-  color: #10a9af !important;
+  color: #af105a !important;
 }
 
 .sf-menu li.active a:hover, .sf-menu li.active a:focus {
-  color: #10a9af;
+  color: #af105a;
 }
 
 .sf-menu li,
@@ -308,7 +309,7 @@ figure {
 .sf-menu ul li:hover a,
 .sf-menu ul li.sfHover a,
 .sf-menu li.active a {
-  color: #10a9af;
+  color: #af105a;
 }
 
 .sf-menu ul li:hover,
@@ -391,10 +392,10 @@ figure {
   }
 }
 #fh5co-logo a {
-  color: #10a9af;
+  color: #af105a;
 }
 #fh5co-logo a:hover, #fh5co-logo a:focus {
-  color: #10a9af !important;
+  color: #af105a !important;
 }
 
 #fh5co-menu-wrap {
@@ -409,7 +410,7 @@ figure {
 }
 
 #fh5co-primary-menu > li > ul li.active > a {
-  color: #10a9af !important;
+  color: #af105a !important;
 }
 #fh5co-primary-menu > li > .sf-with-ul:after {
   border: none !important;
@@ -529,7 +530,7 @@ figure {
   background: none;
 }
 #fh5co-primary-menu .fh5co-sub-menu a:hover {
-  color: #10a9af !important;
+  color: #af105a !important;
 }
 
 #fh5co-work-section,
@@ -567,7 +568,7 @@ figure {
   width: 100px;
   margin-left: -50px;
   height: 2px;
-  background: #10a9af;
+  background: #af105a;
 }
 .heading-section h3 {
   font-size: 40px;
@@ -588,7 +589,7 @@ figure {
 }
 .feature-text h3 .number {
   margin-right: 5px;
-  color: #10a9af;
+  color: #af105a;
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
@@ -599,7 +600,7 @@ figure {
 }
 
 .services {
-  background: #10a9af;
+  background: #af105a;
   background: #fff;
   padding: 40px 20px 20px 20px;
   margin-bottom: 30px;
@@ -620,12 +621,12 @@ figure {
 }
 .services span i {
   font-size: 40px;
-  color: #10a9af !important;
+  color: #af105a !important;
 }
 .services h3 {
   font-size: 20px;
   font-weight: 400;
-  color: #10a9af;
+  color: #af105a;
 }
 .services p {
   font-size: 16px;
@@ -657,7 +658,7 @@ figure {
   display: table-cell;
   vertical-align: middle;
   font-size: 40px;
-  color: #10a9af;
+  color: #af105a;
 }
 .feature-left .feature-copy {
   float: right;
@@ -894,7 +895,7 @@ figure {
 
 #fh5co-services .fh5co-number {
   font-size: 30px;
-  color: #10a9af;
+  color: #af105a;
   position: relative;
   padding-top: 10px;
   font-style: italic;
@@ -910,7 +911,7 @@ figure {
   height: 3px;
   top: 0;
   left: 0;
-  background: #10a9af;
+  background: #af105a;
 }
 #fh5co-services .fh5co-icon {
   margin-bottom: 30px;
@@ -929,7 +930,7 @@ figure {
 }
 #fh5co-services .fh5co-icon i {
   font-size: 200px;
-  color: #10a9af;
+  color: #af105a;
 }
 @media screen and (max-width: 768px) {
   #fh5co-services .fh5co-icon i {
@@ -1025,7 +1026,7 @@ figure {
 .fh5co-testimonial > div h3, .fh5co-team > div h3 {
   margin-bottom: 0;
   font-size: 20px;
-  color: #10a9af;
+  color: #af105a;
 }
 .fh5co-testimonial > div .position, .fh5co-team > div .position {
   color: #d9d9d9;
@@ -1091,7 +1092,7 @@ figure {
   color: rgba(0, 0, 0, 0.3);
 }
 .fh5co-blog .blog-text span.comment a i {
-  color: #10a9af;
+  color: #af105a;
   padding-left: 7px;
 }
 .fh5co-blog .blog-text h3 {
@@ -1136,7 +1137,7 @@ figure {
 
 .fh5co-social-icons > a {
   padding: 4px 10px;
-  color: #10a9af;
+  color: #af105a;
 }
 .fh5co-social-icons > a i {
   font-size: 26px;
@@ -1147,7 +1148,7 @@ figure {
 }
 
 #footer {
-  background: #10a9af;
+  background: #af105a;
   padding: 60px 0 40px;
 }
 #footer p {
@@ -1175,14 +1176,14 @@ figure {
   transition: 0.3s;
 }
 .btn.btn-primary {
-  background: #10a9af;
+  background: #af105a;
   color: #fff;
   border: none !important;
   border: 2px solid transparent !important;
 }
 .btn.btn-primary:hover, .btn.btn-primary:active, .btn.btn-primary:focus {
   box-shadow: none;
-  background: #10a9af;
+  background: #af105a;
   color: #fff !important;
 }
 .btn:hover, .btn:active, .btn:focus {
@@ -1262,14 +1263,14 @@ figure {
   color: rgba(255, 255, 255, 0.4);
 }
 #offcanvas-menu ul li a:hover {
-  color: #10a9af;
+  color: #af105a;
 }
 #offcanvas-menu ul li > .fh5co-sub-menu {
   margin-top: 9px;
   padding-left: 20px;
 }
 #offcanvas-menu ul li.active > a {
-  color: #10a9af;
+  color: #af105a;
 }
 #offcanvas-menu ul .fh5co-sub-menu {
   display: block !important;
@@ -1495,7 +1496,11 @@ figure {
 
 .container {
   position: relative;
-  /* width: 50%; */
+  /* width: 100%; */
+}
+.container-main {
+  position: relative;
+  width: 100%;
 }
 
 .img-responsive {
@@ -1528,7 +1533,7 @@ figure {
 
 .text {
 
-  color: #10a9af;
+  color: #af105a;
   font-size: 16px;
   padding: 16px 32px;
 }
