--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,7 +142,7 @@ figure {
 .fh5co-cover,
 .fh5co-hero {
   position: relative;
-  height: 575px;
+  height: 550px;
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover,
@@ -1200,7 +1200,7 @@ figure {
 }
 
 #fh5co-wrapper {
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
@@ -1218,7 +1218,7 @@ figure {
   transition: 0.5s;
 }
 .fh5co-offcanvas #fh5co-page {
-  border:2px solid red;
+  
   -moz-transform: translateX(-240px);
   -webkit-transform: translateX(-240px);
   -ms-transform: translateX(-240px);
@@ -1261,12 +1261,13 @@ figure {
 #offcanvas-menu ul li a {
   font-size: 18px;
   color: rgba(255, 255, 255, 0.4);
+  
 }
 #offcanvas-menu ul li a:hover {
   color: #af105a;
 }
-#offcanvas-menu ul li > .fh5co-sub-menu {
-  margin-top: 9px;
+#offcanvas-menu ul li > ul {
+  margin-top: 5px;
   padding-left: 20px;
 }
 #offcanvas-menu ul li.active > a {
