--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fh5co-offcanvas .offcanvas-menu-container {
+  transform: translateX(0);
+}
