--- a/public/css/icomoon.css
+++ b/public/css/icomoon.css
@@ -9,9 +9,10 @@
     font-style: normal;
 } */
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
+    font-family: "icomoon" !important;
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -3132,4 +3133,3 @@
 .icon-IcoMoon:before {
     content: "\eca7";
 }
-
