--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1552,7 +1552,7 @@ figure {
     opacity: 1;
     display: block;
     width: 100%;
-    height: 100%;
+    height: 300px;
     transition: 0.5s ease;
     backface-visibility: hidden;
 }
